k8s-demo/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: local-server-svc
spec:
    selector:
        app: local-server
    ports:
        - protocol: TCP
          port: 12000
          targetPort: 12000
        - protocol: TCP
          port: 12005
          targetPort: 12005
        - protocol: TCP
          port: 12010
          targetPort: 12010
        - protocol: TCP
          port: 12015
          targetPort: 12015
    type: NodePort
