k8s-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
    - host: local-server.com
      http:
        paths:
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: local-server-svc
                port:
                  number: 12000
